fixes z-index issue for mobile nav menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ nav {
   padding: 10px 60px;
   position: fixed;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 }
 
 li > a,
@@ -630,7 +630,7 @@ footer > p > a {
     background-color: rgba(0, 0, 0, 0.336);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(10px);
-    z-index: 1;
+    z-index: 2;
   }
 
   #nav-icon {
